--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo:run": "vue-cli-service apollo:run"
   },
   "dependencies": {
+    "graphql-config": "^2.2.1",
     "graphql-type-json": "^0.2.1",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
@@ -17,7 +18,8 @@
     "vue": "^2.5.21",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-cli-plugin-apollo": "^0.19.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
@@ -31,7 +33,6 @@
     "graphql-tag": "^2.9.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-cli-plugin-apollo": "^0.19.1",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
