--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi "
+    "serve": "vue-cli-service serve"
   },
   "dependencies": {
     "graphql-config": "^2.2.1",
