--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "scripts": {
     "start": "node server.js",
-    "serve": "vue-cli-service serve"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "apollo": "vue-cli-service apollo:watch",
+    "apollo:run": "vue-cli-service apollo:run"
   },
   "dependencies": {
     "graphql-config": "^2.2.1",
