--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
     "node": "10.10.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "apollo": "vue-cli-service apollo:watch",
-    "apollo:run": "vue-cli-service apollo:run"
+    "start": "node server.js"
   },
   "dependencies": {
     "graphql-config": "^2.2.1",
